# atomiq

./: CMakeLists.txt  color.cpp  color.h  colorgen.cpp  colorgen.h  colorsort.cpp  colorsort.h  main.cpp
